make menus and items universal